Update install.ps1